--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings">Settings</string>
     <string name="search">Search</string>
     <string name="today">Today</string>
+    <string name="ok">OK</string>
 </resources>
