--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="settings">Settings</string>
     <string name="search">Search</string>
+    <string name="clear_search_text_content_desc">Clear search text</string>
     <string name="today">Today</string>
     <string name="ok">OK</string>
     <string name="default_notification_channel_id">notification_channel_id</string>
