add modal bottom sheet when adding and editing a task, set due date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="now_playing_movies">Now Playing Movies</string>
     <string name="popular_series">Popular Series</string>
     <string name="top_rated_series">Top Rated Series</string>
+    <string name="add_new_item">New task</string>
 </resources>
