--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">One Alex</string>
 
-    <string name="todo">TO DO</string>
+    <string name="todo">My Todo</string>
     <string name="todo_hint">List item</string>
     <string name="movies">MOVIES</string>
     <string name="empty_screen_title">Screen under construction</string>
@@ -13,11 +13,14 @@
     <string name="ok">OK</string>
     <string name="default_notification_channel_id">notification_channel_id</string>
     <string name="cd_back">back</string>
-    <string name="an_error_has_occurred">An error has occured</string>
+    <string name="an_error_has_occurred">An error has occurred</string>
     <string name="retry_label">Retry</string>
     <string name="popular_movies">Popular Movies</string>
     <string name="now_playing_movies">Now Playing Movies</string>
     <string name="popular_series">Popular Series</string>
     <string name="top_rated_series">Top Rated Series</string>
     <string name="add_new_item">New task</string>
+    <string name="enter_new_item">Enter new item</string>
+    <string name="edit_item">Edit item</string>
+    <string name="clear_search">Clear search</string>
 </resources>
